force-app/main/default/objects/Position__c/fields/IconImage__c.field-meta.xml
<CustomField>
    <fullName>IconImage__c</fullName>
    <formula>CASE( TEXT(Status__c) , 
   &apos;New Position&apos;,  IMAGE(&apos;/resource/GreenSign&apos;,&apos;GREEN&apos;,28,24) ,
   &apos;Closed - Filled&apos;, IMAGE(&apos;/resource/RedSign&apos;,&apos;RED&apos;,28,24),
   &apos;no image available&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IconImage</label>
    <type>Text</type>
</CustomField>