force-app/main/default/objects/Position__c/fields/Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required__c</fullName>
    <label>Skills Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Microsoft Office</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>