force-app/main/default/objects/Position__c/validationRules/Close_data_cannot_be_before_open_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_data_cannot_be_before_open_date</fullName>
    <active>true</active>
    <errorConditionFormula>Close_Date__c &lt;  Open_Date__c</errorConditionFormula>
    <errorMessage>Close Date cannot be before Open Date</errorMessage>
</ValidationRule>