force-app/main/default/objects/Position__c/validationRules/max_pay_cannot_be_more_than_1M.validationRule-meta.xml
<ValidationRule>
    <fullName>max_pay_cannot_be_more_than_1M</fullName>
    <active>true</active>
    <errorConditionFormula>Max_Pay__c &gt;= 1000000</errorConditionFormula>
    <errorMessage>Max Pay can not be higher than 1M</errorMessage>
</ValidationRule>