force-app/main/default/objects/Position__c/validationRules/Min_and_max_pay.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_and_max_pay</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay__c &gt;=  Max_Pay__c</errorConditionFormula>
    <errorMessage>Min pay needs to be lower than max pay</errorMessage>
</ValidationRule>